<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actions_view_result"
        android:title="@string/str_view_result"
        app:icon="@drawable/ic_view_result"
        app:showAsAction="always"/>
    <item
        android:id="@+id/actions_add_row"
        android:title="@string/str_add_row"
        app:icon="@drawable/ic_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/actions_calculateStatResult"
        android:title="@string/str_calculate_result"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actions_add_rows"
        android:title="@string/str_add_rows"
        app:icon="@drawable/ic_add_multiple"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actions_clear_all_fields"
        android:title="@string/str_clear_all_fields" />
    <item
        android:id="@+id/actions_delete_all_rows"
        app:icon="@drawable/ic_remove"
        android:title="@string/str_remove_all_rows"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/actions_help"
        app:icon="@drawable/ic_help"
        android:title="@string/str_help"
        app:showAsAction="ifRoom"/>
</menu>