<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="*Instruction: Click and hold to copy."
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Measures Of Central Tendency"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_set_cardinality"/>
        <EditText
            android:id="@+id/txt_result_cardinality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="Content Value"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/str_total_sum" />

        <EditText
            android:id="@+id/txt_result_total_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_arithmetic_mean"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_arithmetic_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_harmonic_mean"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_geometric_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_geometric_mean"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_harmonic_mean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_rms"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_roo_mean_square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_median"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_median"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_modal_values"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="Measures Of Variation(Dispersion)"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_range"/>
        <EditText
            android:id="@+id/txt_result_Range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_variance"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_variance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_std_deviation"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_standard_deviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_mean_deviation"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/txt_result_mean_deviation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="Content Value"/>
    </LinearLayout>

</ScrollView>